refactor(package.json) removed --base flag

--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
     "lint": "nx workspace-lint && nx lint",
     "lint-all": "nx run-many --all --target=lint",
     "affected:lint-all": "nx affected:lint --base=main~1 --head=main --parallel=6 --verbose",
-    "format": "nx format:write --base=main",
-    "format:check": "nx format:check --base=main",
+    "format": "nx format:write",
+    "format:check": "nx format:check",
     "dep-graph": "nx dep-graph",
-    "affected": "nx affected --base=main",
-    "affected:dep-graph": "nx affected:dep-graph --base=main",
-    "affected:apps": "nx affected:apps --base=main",
-    "affected:libs": "nx affected:libs --base=main",
-    "affected:build": "nx affected:build --base=main",
-    "affected:test": "nx affected:test --base=main",
-    "affected:lint": "nx affected:lint --base=main --parallel=6",
+    "affected": "nx affected",
+    "affected:dep-graph": "nx affected:dep-graph",
+    "affected:apps": "nx affected:apps",
+    "affected:libs": "nx affected:libs",
+    "affected:build": "nx affected:build",
+    "affected:test": "nx affected:test",
+    "affected:lint": "nx affected:lint --parallel=6",
     "clean:logs": "rm -rf logs",
     "clean:dist": "rm -rf dist",
     "clean:temp": "rm -rf temp",
-    "clean": "yarn clean:dist && yarn clean:temp && yarn clean:logs",
-    "prepare": "husky install"
+    "clean": "yarn clean:dist && yarn clean:temp && yarn clean:logs"
   },
   "dependencies": {
     "@nestjs/common": "^8.2.0",
