--- a/package.json
+++ b/package.json
@@ -25,32 +25,20 @@
     "clean:logs": "rm -rf logs",
     "clean:dist": "rm -rf dist",
     "clean:temp": "rm -rf temp",
-    "clean": "yarn clean:dist && yarn clean:temp && yarn clean:logs"
+    "clean:node_modules": "rm -rf node_modules",
+    "clean": "yarn clean:node_modules && yarn clean:dist && yarn clean:temp && yarn clean:logs"
   },
   "dependencies": {
     "@nestjs/common": "^8.2.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.2.0",
-    "@nestjs/graphql": "^9.1.2",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.0",
-    "@prisma/client": "^3.7.0",
-    "apollo-server-express": "^3.5.0",
-    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "dotenv-cli": "^4.1.1",
     "express": "^4.17.1",
-    "graphql": "^15.7.2",
-    "graphql-type-json": "^0.3.2",
     "joi": "^17.5.0",
-    "json": "^11.0.0",
     "nest-winston": "^1.6.2",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "prisma-graphql-type-decimal": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0",
@@ -68,11 +56,8 @@
     "@nrwl/node": "13.4.1",
     "@nrwl/tao": "13.4.1",
     "@nrwl/workspace": "13.4.1",
-    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "eslint": "8.2.0",
@@ -81,8 +66,6 @@
     "jest": "27.2.3",
     "lint-staged": "^12.1.4",
     "prettier": "^2.3.1",
-    "prisma": "^3.7.0",
-    "prisma-nestjs-graphql": "^14.6.1",
     "ts-jest": "27.0.5",
     "ts-node": "~10.3.0",
     "typescript": "~4.4.3"
@@ -92,9 +75,6 @@
       "npm run affected:lint --uncommitted",
       "npm run format --uncommitted"
     ]
-  },
-  "prisma": {
-    "seed": "ts-node libs/api/graphql/data-access/prisma/src/lib/seeds/seed.ts"
   },
   "packageManager": "yarn@3.1.1"
 }
