generate config libs

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,18 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "paths": {}
+    "paths": {
+      "@wwwsolutions/api/config/app": ["libs/api/config/app/src/index.ts"],
+      "@wwwsolutions/api/config/codegen": [
+        "libs/api/config/codegen/src/index.ts"
+      ],
+      "@wwwsolutions/api/config/docker": [
+        "libs/api/config/docker/src/index.ts"
+      ],
+      "@wwwsolutions/api/config/features": [
+        "libs/api/config/features/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
