--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "@nestjs/common": "^8.2.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.2.0",
+    "@nestjs/graphql": "^9.1.1",
+    "@nestjs/jwt": "8.0.0",
     "@nestjs/platform-express": "^8.2.0",
+    "apollo-server-express": "^3.5.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "dotenv-cli": "^4.1.1",
@@ -56,6 +60,7 @@
     "@nrwl/node": "13.4.1",
     "@nrwl/tao": "13.4.1",
     "@nrwl/workspace": "13.4.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
