--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -38,7 +38,8 @@
       "@wwwsolutions/api/config/features": [
         "libs/api/config/features/src/index.ts"
       ],
-      "@wwwsolutions/api/core": ["libs/api/core/src/index.ts"]
+      "@wwwsolutions/api/core": ["libs/api/core/src/index.ts"],
+      "@wwwsolutions/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
