refactor(api-config-docker) added Dockerfile.multistage + nginx.conf files

--- a/libs/api/config/docker/src/development/networks.yaml
+++ b/libs/api/config/docker/src/development/networks.yaml
@@ -1,13 +1,17 @@
-version: '3.8'
-services:
-  postgres:
-    networks:
-      - devnet
+# version: '3.8'
+# services:
+#   postgres:
+#     networks:
+#       - devnet
 
-  pgadmin:
-    networks:
-      - devnet
+#   pgadmin:
+#     networks:
+#       - devnet
 
-networks:
-  devnet:
-    driver: bridge
+# networks:
+#   devnet:
+#     driver: bridge
+
+#############################################################################################################
+#############################################################################################################
+#############################################################################################################
