--- a/libs/api/config/docker/src/development/volumes.yaml
+++ b/libs/api/config/docker/src/development/volumes.yaml
@@ -1,20 +1,24 @@
-version: '3.8'
-services:
-  postgres:
-    volumes:
-      - pg-data:/var/lib/postgresql/data
-      - postgresql-bin:/usr/lib/postgresql
-      - ../../../../../../.docker/generated/volumes/files:/files
+# version: '3.8'
+# services:
+#   postgres:
+#     volumes:
+#       - pg-data:/var/lib/postgresql/data
+#       - postgresql-bin:/usr/lib/postgresql
+#       - ../../../../../../.docker/generated/volumes/files:/files
 
-  pgadmin:
-    volumes:
-      - postgresql-bin:/usr/lib/postgresql
-      - pgadmin-root-prefs:/root/.pgadmin
+#   pgadmin:
+#     volumes:
+#       - postgresql-bin:/usr/lib/postgresql
+#       - pgadmin-root-prefs:/root/.pgadmin
 
-volumes:
-  pg-data:
-    driver: local
-  postgresql-bin:
-    driver: local
-  pgadmin-root-prefs:
-    driver: local
+# volumes:
+#   pg-data:
+#     driver: local
+#   postgresql-bin:
+#     driver: local
+#   pgadmin-root-prefs:
+#     driver: local
+
+#############################################################################################################
+#############################################################################################################
+#############################################################################################################
