--- a/libs/api/config/docker/src/development/base.yaml
+++ b/libs/api/config/docker/src/development/base.yaml
@@ -25,3 +25,20 @@
 #############################################################################################################
 #############################################################################################################
 #############################################################################################################
+
+# https://youtu.be/QeQ2MH5f_BE?t=652
+
+version: '3.8'
+services:
+  app:
+    image: node:lts-alpine
+    command: sh -c "npm install && npx nx run api:serve"
+    working_dir: /app
+    volumes:
+      - node_modules:/app/node_modules
+      - ./:/app
+    ports:
+      - 3000:3000
+
+volumes:
+  node_modules:
