--- a/libs/api/config/docker/src/development/networks.yaml
+++ b/libs/api/config/docker/src/development/networks.yaml
@@ -15,3 +15,4 @@
 #############################################################################################################
 #############################################################################################################
 #############################################################################################################
+version: '3.8'
