--- a/libs/api/config/docker/src/development/ports.yaml
+++ b/libs/api/config/docker/src/development/ports.yaml
@@ -15,3 +15,4 @@
 #############################################################################################################
 #############################################################################################################
 #############################################################################################################
+version: '3.8'
