--- a/libs/api/config/docker/src/development/volumes.yaml
+++ b/libs/api/config/docker/src/development/volumes.yaml
@@ -22,3 +22,4 @@
 #############################################################################################################
 #############################################################################################################
 #############################################################################################################
+version: '3.8'
