--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -1,95 +1,91 @@
-# Temporary (partially cached) build image
-# base
-FROM node:14.18.0-alpine AS base
-WORKDIR /app
-COPY package.json yarn.lock ./
+# FROM node:lts-alpine AS base
+# # Setup a home directory and file permissions
+# RUN mkdir -p /home/node/app
+# RUN chown -R node:node /home/node/app && chmod -R 770 /home/node/app
+# WORKDIR /home/node/app
+# COPY --chown=node:node ./package.json ./package.json
+# COPY --chown=node:node ./yarn.lock ./yarn.lock
+# COPY --chown=node:node ./.yarn ./.yarn/
+# COPY --chown=node:node ./.yarnrc.yml ./.yarnrc.yml
 
 
 # #####################################
 # #        BACKEND ENVIRONMENT        #
 # #####################################
 
-# backend-base
-FROM base AS backend-base
-RUN yarn install && yarn cache clean
+# # FROM base AS backend-base
+# # COPY package.json yarn.lock ./
 
-# backend-dev
-FROM backend-base AS backend-dev
-COPY . .
-CMD ["yarn", "dev"]
+# FROM base AS backend-dev
+# WORKDIR /home/node/app
+# # Copy the rest of our sources from the host to the container
+# COPY --chown=node:node . ./
+# USER node
+# RUN yarn install && yarn cache clean && yarn prod
+# EXPOSE 3000
+# # Set the default command to our file watcher/dev runtime (since this is our dev target).
+# CMD ["npm", "run", "dev"]
 
-# # backend-prod
-# FROM backend-base AS backend-prod
-# COPY dist/apps/api .
-# CMD ["yarn", "prod"]
+
+# FROM base AS backend-prod
+# WORKDIR /home/node/app
+# WORKDIR /app
+# USER node
+# # Copy client-side build
+# COPY --chown=node:node --from=backend-dev /home/node/app/dist ./dist/
+# # Copy server-side runtime npm modules
+# COPY --chown=node:node --from=base /home/node/app/node_modules ./node_modules
+# # Copy everything else we need to run.
+# COPY --chown=node:node ./package.json ./package.json
+# COPY --chown=node:node ./yarn.lock ./yarn.lock
+# # COPY --chown=node:node ./assets ./assets
+# # COPY --chown=node:node ./bin ./bin
+# # COPY --chown=node:node ./src ./src
+# EXPOSE 3000
+# RUN yarn install --production && yarn cache clean
+# CMD ["npm", "run", "prod"]
 
 
-# # #####################################
-# # #       FRONTEND ENVIRONMENT        #
-# # #####################################
 
-# # # FROM base AS frontend-base
-# # # COPY frontend/package.json frontend/yarn.lock ./
-# # # RUN yarn install && yarn cache clean
-# # # CMD ["yarn", "start"]
-# # FROM base AS frontend-base
-# # COPY ./dist/apps/html .
-# # ENV PORT=3334
-# # EXPOSE ${PORT}
-# # RUN npm install --production
-# # RUN npm install reflect-metadata tslib rxjs hbs
-# # CMD node ./main.js
+#####################################
+#       FRONTEND ENVIRONMENT        #
+#####################################
 
 # FROM base AS frontend-base
+# COPY frontend/package.json frontend/yarn.lock ./
 # RUN yarn install && yarn cache clean
-# CMD ["yarn", "start:dev"]
+# CMD ["yarn", "start"]
+
+# FROM frontend-base AS frontend-final
+# COPY frontend/public ./public
+# COPY frontend/src ./src
+# RUN yarn build
+
+#####################################
+#       COMBINED ENVIRONMENT        #
+#####################################
+
+# FROM backend-base AS final
+# RUN yarn install --production && yarn cache clean
+# COPY backend/src ./src
+# COPY --from=frontend-final /app/build /app/src/static
+# CMD ["node", "/app/src/index.js"]
 
 
-# # # FROM frontend-base AS frontend-final
-# # # COPY frontend/public ./public
-# # # COPY frontend/src ./src
-# # # RUN yarn build
 
-# # #####################################
-# # #       COMBINED ENVIRONMENT        #
-# # #####################################
+ARG node_version=node:lts-alpine
+FROM node:${node_version} AS build
+WORKDIR /app
+COPY package.json yarn.lock .
+RUN yarn install --immutable
+COPY . .
+RUN yarn nx run api:build
 
-# # # FROM backend-base AS final
-# # # RUN yarn install --production && yarn cache clean
-# # # COPY backend/src ./src
-# # # COPY --from=frontend-final /app/build /app/src/static
-# # # CMD ["node", "/app/src/index.js"]
-
-FROM backend-base AS final
-
-
-### NESTJS https://www.youtube.com/watch?v=NG2GPsxN3Ec
-
-# FROM node:14.18.0-alpine AS development
-
-# WORKDIR /usr/src/app
-
-# COPY package*.json ./
-
-# RUN npm install
-
-# COPY . .
-
-# RUN npm run build
-
-# FROM node:14.18.0-alpine as production
-
-# ARG NODE_ENV=production
-# ENV NODE_ENV=${NODE_ENV}
-
-# WORKDIR /usr/src/app
-
-# COPY package*.json ./
-
-# RUN npm install --only=production
-
-# COPY . .
-
-# COPY --from=development /usr/src/app/dist ./dist
-
-# CMD ["yarn", "start:prod"]
+FROM node:${node_version}
+WORKDIR /app
+ENV NODE_ENV=production
+COPY package.json yarn.lock .
+RUN yarn install --immutable
+# RUN npm ci  # in production mode, skips devDependencies
+COPY --from=build /app/dist dist
+CMD ["node", "/dist/apps/api/main.js"]
