migrated to npm

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,15 @@
-.husky/
-.docker/
-node_modules/
-coverage/
-tools/
-Dockerfile*
+.husky
 .vscode
+.docker
+.yarn
+dist
+tmp
+tools
+coverage
+node_modules
+
 .dockerignore
+Dockerfile*
 .git
 .gitignore
 README.md
