--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.eol": "\n",
   "workbench.colorCustomizations": {
-    "activityBar.background": "#4A1359",
-    "titleBar.activeBackground": "#681B7D",
-    "titleBar.activeForeground": "#FDFBFE"
+    "activityBar.background": "#064d1e",
+    "titleBar.activeBackground": "#092907",
+    "titleBar.activeForeground": "#99ac9c"
   },
   "vsicons.presets.nestjs": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
