--- a/libs/api/config/docker/src/development/base.yaml
+++ b/libs/api/config/docker/src/development/base.yaml
@@ -1,44 +1,23 @@
-# version: '3.8'
-# services:
-#   postgres:
-#     container_name: postgresdev
-#     # image: postgres:14.1-alpine
-#     build: # "context" and "dockerfile" fields have to be under "build"
-#       context: ../../libs/api/config/docker/src/development/seeds/postgres
-#       dockerfile: ./demo/Dockerfile.demo
-#       # dockerfile: ./northwind/Dockerfile.northwind
-#     restart: always
-#     healthcheck:
-#       test: ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', 'root']
-#       timeout: 45s
-#       interval: 10s
-#       retries: 10
-
-#   pgadmin:
-#     container_name: pgadmin
-#     image: dpage/pgadmin4
-
-#   redis:
-#     image: redis:alpine
-#     container_name: redisdev
-
-#############################################################################################################
-#############################################################################################################
-#############################################################################################################
-
-# https://youtu.be/QeQ2MH5f_BE?t=652
-
-version: '3.8'
+version: '2.4'
 services:
-  app:
-    image: node:lts-alpine
-    command: sh -c "npm install && npx nx run api:serve"
-    working_dir: /app
-    volumes:
-      - node_modules:/app/node_modules
-      - ./:/app
-    ports:
-      - 3000:3000
+  postgres:
+    container_name: postgresdev
+    # image: postgres:14.1-alpine
+    build: # "context" and "dockerfile" fields have to be under "build"
+      context: ../../libs/api/config/docker/src/development/seeds/postgres
+      dockerfile: ./demo/Dockerfile.demo
+      # dockerfile: ./northwind/Dockerfile.northwind
+    restart: always
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-q', '-d', 'postgres', '-U', 'root']
+      timeout: 45s
+      interval: 10s
+      retries: 10
 
-volumes:
-  node_modules:
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+
+  redis:
+    image: redis:alpine
+    container_name: redisdev
