--- a/libs/api/config/docker/src/development/environment.yaml
+++ b/libs/api/config/docker/src/development/environment.yaml
@@ -1,20 +1,15 @@
-# version: '3.8'
-# services:
-#   postgres:
-#     environment:
-#       - DATABASE_HOST=${POSTGRES_HOSTNAME}
-#       - POSTGRES_USER=${POSTGRES_USER}
-#       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-#       - POSTGRES_DB=${POSTGRES_DB_NAME}
+version: '2.4'
+services:
+  postgres:
+    environment:
+      - DATABASE_HOST=${POSTGRES_HOSTNAME}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB_NAME}
 
-#   pgadmin:
-#     environment:
-#       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-#       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
-#       - PGADMIN_LISTEN_PORT=${PGADMIN_LISTEN_PORT}
-#       - PGADMIN_CONFIG_SERVER_MODE=${PGADMIN_CONFIG_SERVER_MODE}
-
-#############################################################################################################
-#############################################################################################################
-#############################################################################################################
-version: '3.8'
+  pgadmin:
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+      - PGADMIN_LISTEN_PORT=${PGADMIN_LISTEN_PORT}
+      - PGADMIN_CONFIG_SERVER_MODE=${PGADMIN_CONFIG_SERVER_MODE}
