--- a/libs/api/config/docker/src/development/networks.yaml
+++ b/libs/api/config/docker/src/development/networks.yaml
@@ -1,18 +1,13 @@
-# version: '3.8'
-# services:
-#   postgres:
-#     networks:
-#       - devnet
+version: '2.4'
+services:
+  postgres:
+    networks:
+      - devnet
 
-#   pgadmin:
-#     networks:
-#       - devnet
+  pgadmin:
+    networks:
+      - devnet
 
-# networks:
-#   devnet:
-#     driver: bridge
-
-#############################################################################################################
-#############################################################################################################
-#############################################################################################################
-version: '3.8'
+networks:
+  devnet:
+    driver: bridge
