--- a/libs/api/config/docker/src/development/ports.yaml
+++ b/libs/api/config/docker/src/development/ports.yaml
@@ -1,18 +1,13 @@
-# version: '3.8'
-# services:
-#   postgres:
-#     ports:
-#       - ${POSTGRES_PORT}:5432
+version: '2.4'
+services:
+  postgres:
+    ports:
+      - ${POSTGRES_PORT}:5432
 
-#   pgadmin:
-#     ports:
-#       - ${PGADMIN_LISTEN_PORT}:5050
+  pgadmin:
+    ports:
+      - ${PGADMIN_LISTEN_PORT}:5050
 
-#   redis:
-#     ports:
-#       - ${REDIS_PORT}:6379
-
-#############################################################################################################
-#############################################################################################################
-#############################################################################################################
-version: '3.8'
+  redis:
+    ports:
+      - ${REDIS_PORT}:6379
