--- a/libs/api/config/docker/src/development/volumes.yaml
+++ b/libs/api/config/docker/src/development/volumes.yaml
@@ -1,25 +1,20 @@
-# version: '3.8'
-# services:
-#   postgres:
-#     volumes:
-#       - pg-data:/var/lib/postgresql/data
-#       - postgresql-bin:/usr/lib/postgresql
-#       - ../../../../../../.docker/generated/volumes/files:/files
+version: '2.4'
+services:
+  postgres:
+    volumes:
+      - pg-data:/var/lib/postgresql/data
+      - postgresql-bin:/usr/lib/postgresql
+      - ../../../../../../.docker/generated/volumes/files:/files
 
-#   pgadmin:
-#     volumes:
-#       - postgresql-bin:/usr/lib/postgresql
-#       - pgadmin-root-prefs:/root/.pgadmin
+  pgadmin:
+    volumes:
+      - postgresql-bin:/usr/lib/postgresql
+      - pgadmin-root-prefs:/root/.pgadmin
 
-# volumes:
-#   pg-data:
-#     driver: local
-#   postgresql-bin:
-#     driver: local
-#   pgadmin-root-prefs:
-#     driver: local
-
-#############################################################################################################
-#############################################################################################################
-#############################################################################################################
-version: '3.8'
+volumes:
+  pg-data:
+    driver: local
+  postgresql-bin:
+    driver: local
+  pgadmin-root-prefs:
+    driver: local
