--- a/package.json
+++ b/package.json
@@ -38,15 +38,17 @@
     "@nestjs/common": "^8.2.0",
     "@nestjs/config": "^1.1.0",
     "@nestjs/core": "^8.2.0",
-    "@nestjs/graphql": "^9.1.1",
+    "@nestjs/graphql": "^9.1.2",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/platform-express": "^8.2.0",
-    "apollo-server-express": "^3.5.0",
+    "apollo-server-express": "^3.6.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^4.1.1",
+    "graphql": "^15.8.0",
+    "graphql-type-json": "^0.3.2",
     "joi": "^17.5.0",
     "nest-winston": "^1.6.2",
     "reflect-metadata": "^0.1.13",
@@ -67,6 +69,7 @@
     "@nrwl/node": "13.4.1",
     "@nrwl/tao": "13.4.1",
     "@nrwl/workspace": "13.4.1",
+    "@prisma/client": "^3.8.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
@@ -78,6 +81,8 @@
     "jest": "27.2.3",
     "lint-staged": "^12.1.4",
     "prettier": "^2.3.1",
+    "prisma": "^3.8.0",
+    "prisma-nestjs-graphql": "^14.6.1",
     "ts-jest": "27.0.5",
     "ts-node": "~10.3.0",
     "typescript": "~4.4.3"
