--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,7 +3,7 @@
 # 
 # For EXACT list of variables inspect `validation.schema.ts`
 
-API_TYPE=GRAPHQL
+API_TYPE=GraphqlApi
 API_PROTOCOL=http
 API_HOST_NAME=localhost
 API_PORT=3000
