--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,5 @@
 node_modules
-libs/api/graphql/data-access/prisma/src/lib
-libs/api/graphql/data-access/models/src/lib
 
-libs/api/rest/data-access/api/src/lib
+# libs/api/data-access/models/src/lib/generated/*.ts
+**/generated
+
