--- a/libs/api/data-access/prisma/project.json
+++ b/libs/api/data-access/prisma/project.json
@@ -175,8 +175,8 @@
         "parallel": false,
         "commands": [
           "echo EXECUTING CUSTOM COMMAND 'apply'",
-          "nx run api-graphql-data-access-prisma:migrate-dev-no-seed --env={args.env} --name={args.name}",
-          "nx run api-graphql-data-access-prisma:generate --env={args.env}",
+          "nx run api-data-access-prisma:migrate-dev-no-seed --env={args.env} --name={args.name}",
+          "nx run api-data-access-prisma:generate --env={args.env}",
           "echo COMMAND EXECUTION END"
         ]
       }
@@ -186,19 +186,19 @@
       "options": {
         "parallel": false,
         "commands": [
-          "nx run api-graphql-data-access-prisma:migrate-dev --env=development --name=my_migration_name",
-          "nx run api-graphql-data-access-prisma:migrate-dev-no-seed --env=development --name=my_migration_name",
-          "nx run api-graphql-data-access-prisma:migrate-reset --env=development",
-          "nx run api-graphql-data-access-prisma:migrate-reset-no-seed --env=development",
-          "nx run api-graphql-data-access-prisma:migrate-status --env=development",
-          "nx run api-graphql-data-access-prisma:seed --env=development",
-          "nx run api-graphql-data-access-prisma:version",
-          "nx run api-graphql-data-access-prisma:generate --env=development",
-          "nx run api-graphql-data-access-prisma:generate-watch --env=development",
-          "nx run api-graphql-data-access-prisma:format --env=development",
-          "nx run api-graphql-data-access-prisma:studio --env=development",
-          "nx run api-graphql-data-access-prisma:introspect --env=development",
-          "nx run api-graphql-data-access-prisma:apply --env=development --name=my_migration_name"
+          "nx run api-data-access-prisma:migrate-dev --env=development --name=my_migration_name",
+          "nx run api-data-access-prisma:migrate-dev-no-seed --env=development --name=my_migration_name",
+          "nx run api-data-access-prisma:migrate-reset --env=development",
+          "nx run api-data-access-prisma:migrate-reset-no-seed --env=development",
+          "nx run api-data-access-prisma:migrate-status --env=development",
+          "nx run api-data-access-prisma:seed --env=development",
+          "nx run api-data-access-prisma:version",
+          "nx run api-data-access-prisma:generate --env=development",
+          "nx run api-data-access-prisma:generate-watch --env=development",
+          "nx run api-data-access-prisma:format --env=development",
+          "nx run api-data-access-prisma:studio --env=development",
+          "nx run api-data-access-prisma:introspect --env=development",
+          "nx run api-data-access-prisma:apply --env=development --name=my_migration_name"
         ]
       }
     }
