created ApiIntegrationType enum

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -83,4 +83,4 @@ services:
       - WINSTON_PRETTY_PRINT=${WINSTON_PRETTY_PRINT}
       - WINSTON_LEVEL_FILE=${WINSTON_LEVEL_FILE}
       - WINSTON_FILE_PATH=${WINSTON_FILE_PATH}
-      - API_INTEGRATION=${API_INTEGRATION}
+      - API_INTEGRATION_TYPE=${API_INTEGRATION_TYPE}
