--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -5,7 +5,7 @@
 
 API_TYPE=GraphqlApi
 API_PROTOCOL=http
-API_HOST_NAME=localhost
+API_HOSTNAME=localhost
 API_PORT=3000
 API_INTEGRATION_TYPE=xxxxxxxxx
 
