chaged env vars + validation for prisma --> OPTIONAL

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,7 +1,10 @@
-# `.env.development`, `.env.production`, `.env.staging` and `.env.production` files are CLONES.
-# whilst `.env.local` file holds `NODE_ENV` variable as a single value.
+# `.env.development`, 
+# `.env.production`, 
+# `.env.staging` 
+# and `.env.production` files are CLONES.
+# whilst `.env.local` file holds single value `NODE_ENV`.
 # 
-# For EXACT list of variables inspect `validation.schema.ts`
+# For full list of variables inspect `validation.schema.ts`
 
 API_TYPE=GraphqlApi
 API_PROTOCOL=http
