--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/core": "^8.2.0",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.0",
     "apollo-server-express": "^3.6.1",
     "bcryptjs": "^2.4.3",
@@ -52,6 +53,8 @@
     "joi": "^17.5.0",
     "joi-password": "^2.0.3",
     "nest-winston": "^1.6.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0",
@@ -74,6 +77,8 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "eslint": "8.2.0",
