--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/platform-express": "^8.2.0",
     "apollo-server-express": "^3.6.1",
     "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
