--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.0",
+    "@nestjs/swagger": "^5.1.5",
     "apollo-server-express": "^3.6.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
@@ -58,6 +59,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "swagger-ui-express": "^4.3.0",
     "tslib": "^2.0.0",
     "winston": "^3.3.3"
   },
