--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/core": "^8.2.0",
     "@nestjs/graphql": "^9.1.2",
     "@nestjs/jwt": "8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.2.0",
     "@nestjs/swagger": "^5.1.5",
@@ -54,6 +55,7 @@
     "graphql-type-json": "^0.3.2",
     "joi": "^17.5.0",
     "joi-password": "^2.0.3",
+    "mongoose": "^6.1.7",
     "nest-winston": "^1.6.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
