--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -17,7 +17,15 @@
         "main": "apps/api/src/main.ts",
         "tsConfig": "apps/api/tsconfig.app.json",
         "assets": ["apps/api/src/assets"],
-        "generatePackageJson": true
+        "generatePackageJson": true,
+        "tsPlugins": [
+          {
+            "name": "@nestjs/swagger/plugin",
+            "options": {
+              "dtoFileNameSuffix": [".dto.ts", ".model.ts"]
+            }
+          }
+        ]
       },
       "configurations": {
         "production": {
