--- a/libs/api/config/docker/src/development/environment.yaml
+++ b/libs/api/config/docker/src/development/environment.yaml
@@ -16,5 +16,5 @@ services:
 
   mongodb:
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_USERNAME}
