--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,7 +6,7 @@
 # 
 # For full list of variables inspect `validation.schema.ts`
 
-API_TYPE=GraphqlApi
+API_TYPE=GraphQL
 API_PROTOCOL=http
 API_HOSTNAME=localhost
 API_PORT=3000
