--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
     "bcryptjs": "^2.4.3",
-    "chalk": "^5.0.0",
+    "chalk": "4.1.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
