--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -57,6 +57,9 @@
       "@wwwsolutions/api/domain/article/data-access": [
         "libs/api/domain/article/data-access/src/index.ts"
       ],
+      "@wwwsolutions/api/domain/article/dtos": [
+        "libs/api/domain/article/dtos/src/index.ts"
+      ],
       "@wwwsolutions/api/domain/article/feature": [
         "libs/api/domain/article/feature/src/index.ts"
       ],
