--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -6,29 +6,118 @@
 # 
 # For full list of variables inspect `validation.schema.ts`
 
-API_TYPE=GraphQL
-API_PROTOCOL=http
-API_HOSTNAME=localhost
-API_PORT=3000
-API_INTEGRATION=xxxxxxxxx
+#################################################################################
+#                       APPLICATION CONFIGURATION                               #
+#################################################################################
 
-ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=password
+##### API CONFIGURATION ################################################################################
 
-JWT_DEV_SECRET=DEV-SECRET-123456789
-JWT_PROD_SECRET=PROD-SECRET-123456789
+### REQUIRED
+# API_TYPE='GraphQL'
+# API_INTEGRATION='Graphql-Prisma-Integration'
 
-WINSTON_DEV_LEVEL_CONSOLE=verbose
-WINSTON_DEV_LEVEL_FILE=silly
-WINSTON_DEV_FILE_PATH=logs/app.log
+API_TYPE='REST'
+API_INTEGRATION='Rest-Mongoose-Integration'
 
-WINSTON_PROD_LEVEL_CONSOLE=error
-WINSTON_PROD_LEVEL_FILE=error
-WINSTON_PROD_FILE_PATH=logs/app.log
 
-API_KEY=43234hhb32984b238234b32gfz3
 
-# `true` = use standard playground
-# `false` = use Apollo Sandbox --> advanced 
-# `default` = false
-GRAPHQL_PLAYGROUND=false
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/app/src/lib/validation.schema.ts`
+
+# API_PROTOCOL='http'
+# API_HOSTNAME='localhost'
+# API_PORT=3333
+
+
+##### WINSTON CONFIGURATION ############################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/app/app/src/lib/validation.schema.ts`
+
+# WINSTON_LEVEL_CONSOLE='verbose'
+# WINSTON_PRETTY_PRINT=true
+# WINSTON_LEVEL_FILE='silly'
+
+##### SWAGGER CONFIGURATION ############################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/app/app/src/lib/validation.schema.ts`
+
+# SWAGGER_UI_DIR='docs'
+
+
+
+#################################################################################
+#                       FEATURES CONFIGURATION                                  #
+#################################################################################
+
+##### PRISMA CONFIGURATION ################################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+# PRISMA_DATASOURCE_PROVIDER='postgresql'
+
+
+##### POSTGRES CONFIGURATION ################################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+POSTGRES_USER='root'
+POSTGRES_PASSWORD='root'
+POSTGRES_HOSTNAME=127.0.0.1
+POSTGRES_DB_NAME='demo'
+POSTGRES_PORT=5432
+
+
+##### PGADMIN CONFIGURATION ################################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+PGADMIN_CONFIG_SERVER_MODE='False'
+PGADMIN_DEFAULT_EMAIL='pgadmin4@pgadmin.org'
+PGADMIN_DEFAULT_PASSWORD='postgres'
+PGADMIN_LISTEN_PORT=5050
+
+
+##### REDIS CONFIGURATION ################################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+REDIS_PORT=6379
+
+
+##### ADMIN CONFIGURATION ################################################################################
+
+### REQUIRED
+
+ADMIN_EMAIL='admin@example.com'
+ADMIN_PASSWORD='password'
+
+
+##### JWT CONFIGURATION ################################################################################
+
+### REQUIRED
+
+JWT_SECRET='My$deepest$Secret#123456789'
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+JWT_SIGN_OPTIONS_EXPIRES_IN=3600
+
+########################################################################
+
+### OPTIONAL
+# OVERRIDE DEFAULT VALUES FROM `libs/api/config/features/src/lib/validation.schema.ts`
+
+# MONGO_URI='mongodb://localhost:27017'
+
+MONGO_INITDB_ROOT_USERNAME='root'
+MONGO_INITDB_ROOT_PASSWORD='root'
+MONGO_HOSTNAME=localhost
+MONGO_DB_NAME='demo'
+MONGO_PORT=27017
