--- a/package.json
+++ b/package.json
@@ -87,16 +87,16 @@
     "@angular/language-service": "~13.1.0",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.2.0",
-    "@nrwl/angular": "^13.5.1",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/js": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/nest": "13.4.6",
-    "@nrwl/node": "13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
+    "@nrwl/angular": "13.5.2",
+    "@nrwl/cli": "13.5.2",
+    "@nrwl/eslint-plugin-nx": "13.5.2",
+    "@nrwl/jest": "13.5.2",
+    "@nrwl/js": "13.5.2",
+    "@nrwl/linter": "13.5.2",
+    "@nrwl/nest": "13.5.2",
+    "@nrwl/node": "13.5.2",
+    "@nrwl/tao": "13.5.2",
+    "@nrwl/workspace": "13.5.2",
     "@openapitools/openapi-generator-cli": "^2.4.25",
     "@prisma/client": "^3.8.0",
     "@types/bcryptjs": "^2.4.2",
@@ -117,7 +117,7 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "prisma": "^3.8.0",
     "prisma-nestjs-graphql": "^14.6.1",
     "ts-jest": "^27.1.3",
